# snowline

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: bar_graph.rs  line_graph.rs
examples/common/: base.rs  mod.rs
examples/common/mcp_server/: handler.rs  mod.rs  tools.rs
src/: lib.rs  zoom.rs
src/bar_graph/: color_scheme.rs  drawing.rs  mod.rs  state.rs
src/line_graph/: color_scheme.rs  mod.rs  state.rs  types.rs  zoom.rs
src/utils/: drawing.rs  graph_state.rs  interaction.rs  labels.rs  mapper.rs  mod.rs
