[package]
name = "snowline"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { features = ["canvas"], workspace = true }


[dev-dependencies]
rand = "0.9.2"


[workspace.dependencies]
iced = "0.14.0-dev"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "f9a6a30" }
