[package]
name = "snowline"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { features = ["canvas"], workspace = true }


[dev-dependencies]
axum = "0.8.4"
async-trait = "0.1.89"
rand = "0.9.2"
iced.workspace = true
iced.features = ["advanced", "tokio"]
serde = { version = "1.0", features = ["derive"] }
schemars = "1"
image = "0.25.6"
rust-mcp-sdk = "0.6.1"
serde_json = "1.0"
tokio = { version = "1" }
anyhow = "1.0.99"


[workspace.dependencies]
iced = "0.14.0-dev"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "f9a6a30" }
